--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,20 +7,6 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      oracle:
-        image: gvenzl/oracle-xe:18-slim
-        env:
-          ORACLE_RANDOM_PASSWORD: true
-          APP_USER: unittests
-          APP_USER_PASSWORD: password
-        ports:
-          - 1521:1521
-        options: >-
-          --health-cmd healthcheck.sh
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 10
-
       mysql:
         image: mysql:8
         env:
@@ -85,6 +71,12 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ matrix.java-version }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-${{ matrix.java-version }}-
+
+      - uses: aalmiray/setup-oracledb@v1
+        with:
+          tag: 18-slim
+          app-user: unittests
+          app-user-password: password
 
       - name: Test with Gradle
         run: ./gradlew -Dtest.postgres=true -Dtest.mysql=true -Dtest.oracle=true build check --stacktrace -PtestsBadgeApiKey=${{ secrets.TESTS_BADGE_API_KEY }}
